src/midnight.scss
/* ... */
@media (min-width: 1300px) and (max-width: 1350px) {
  body:not(.public) #connectform h2 {
    font-size: 48px;
  }

  .public #connectform h2::after {
    font-size: 48px;
  }
}

@media (min-width: 1100px) and (max-width: 1300px) {
  body:not(.public) #connectform h2 {
    font-size: 48px;
  }

  .public #connectform h2::after {
    font-size: 48px;
  }
}

@media (min-width: 760px) and (max-width: 1100px) {
  body:not(.public) #connectform h2 {
    font-size: 42px;
  }

  .public #connectform h2::after {
    font-size: 42px;
  }
}

@media (min-width: 670px) and (max-width: 760px) {
  body:not(.public) #connectform h2 {
    font-size: 42px;
  }

  .public #connectform h2::after {
    font-size: 42px;
  }
}

@media (max-width: 670px) {
  body:not(.public) #connectform h2 {
    font-size: 32px;
  }

  .public #connectform h2::after {
    font-size: 32px;
  }
}

#connectform {
  margin-top: 4.2rem;
}

#connectform input.input,
#connectform button {
  font-size: 18px;
  font-weight: 600;
  height: auto;
  padding: 15px 20px;
  transition: all 22ms;
}

#connect .btn {
  background: linear-gradient(-180deg, #34b859, #2ea44f);
  border: 1px solid rgba(255, 255, 255, .05);
  border-radius: 4px;
  color: #fff;
  transition: all 22ms;
}

.public #connect .btn {
  font-size: 0;
}

.public #connect .btn::after {
  border-bottom-left-radius: 0;
  border-left: 0;
  border-top-left-radius: 0;
  color: #fff;
  content: '/join #pulina';
  font-size: 20px;
  text-transform: lowercase;
  transition: all 22ms;
}

#connectform input.input {
  background-color: transparent;
  border: 1px solid rgba(255, 255, 255, .3);
  color: #fff;
  font-size: 22px !important;
  line-height: 1;
  transition: all 22ms;
}

#connectform input.input::placeholder {
  color: rgba(255, 255, 255, .7);
  opacity: 1;
}

#connectform input.input:hover,
#connectform input.input:focus {
  border-color: rgba(255, 255, 255, .4);
}

#connectform input.input:hover::placeholder,
#connectform input.input:focus::placeholder {
  color: rgba(255, 255, 255, 1);
}

@media (max-width: 760px) {
  #connectform {
    justify-content: center;
  }
}

@media (max-width: 1200px) {
  #connectform input.input,
  #connect .btn::after {
    font-size: 16px !important;
  }
}

#sidebar .empty {
  display: none;
}

// Import overrides
/* Conversation layout, only on mobile */
@media (max-width: 479px) {
  #chat .date-marker::before {
    top: 1px;
  }

  #chat .date-marker-text::before {
    white-space: nowrap;
  }

  #chat .msg .time {
    margin-right: 5px;
    position: static;
    white-space: normal;
  }

  // Bubble-like layout
  #chat .msg {
    background: rgba(#122046, .7);
    border-radius: 8px;
    margin: 4px 10px;
    max-width: 82%;
    padding: 8px 10px 5px 5px;
  }

  #chat .chat-view[data-type=channel] .msg.highlight {
    background: #2d3e6d !important;
    padding: 8px 10px 5px 5px;

    &.previous-source {
      margin-top: -1px;
      padding: 1px 5px 3px;
    }
  }

  #chat .msg.self {
    background: lighten(#122042, 9%);
    float: right !important;
    justify-self: flex-end;
    margin-left: auto;
    max-width: 82%;
    padding: 2px 5px 1px;

    // No need for own nick on mobile
    .from,
    .time {
      display: none !important;
    }

    &.previous-source {
      padding: 2px 5px 1px;

      .content {
        margin-bottom: -6px;
      }
    }

    .time {
      color: lighten(#374468, 12%) !important;
    }
  }

  #chat .msg.previous-source {
    margin-top: -1px;
    padding: 2px 5px 1px;
  }

  #chat .msg + .msg.previous-source .time,
  #chat .msg + .msg.previous-source .from {
    display: none !important;
  }

  #chat .msg[data-type="message"] .from {
    display: inline-block;
    float: left;
    padding-left: 5px !important;
    text-align: left !important;
    width: auto !important;
  }

  #chat .msg:not([data-type="message"]) .from {
    display: none;
  }

  #chat .msg:not([data-type="message"]) .from::before {
    display: none;
  }

  #chat .msg[data-type="message"] {
    flex-wrap: wrap !important;
  }

  #chat .msg[data-type="message"] .content {
    clear: both;
    display: block;
    float: none;
    padding-bottom: 5px !important;
    padding-top: 5px !important;
    white-space: normal;
    width: auto;
  }

  #chat .msg[data-type="message"].previous-source .content {
    display: inline-block;
  }

  #chat .msg:not([data-type="message"]) .content {
    border: 0 !important;
    opacity: .85;
  }

  #chat .msg:not([data-type="message"]) .time {
    display: none;
  }

  #chat .content {
    border: 0 !important;
    display: block;
  }

  #chat .toggle-content {
    margin-top: 8px;
  }

  #chat .toggle-content .toggle-text {
    white-space: normal;
  }

  #chat .toggle-content:not(.toggle-type-image) .toggle-thumbnail {
    max-height: 100%;
  }
}

/* Mobile font sizes */
@media (max-width: 479px) {
  .messages .msg,
  .messages .msg .content {
    font-size: 17px;
  }

  .messages .msg .from {
    font-size: 17px;
  }

  .messages .msg .time {
    align-self: flex-start;
    font-size: 17px;
    line-height: 1.9;
  }
}

